# ayon-toastnotify

./: .gitignore  README.md  ayon-toastnotify.code-workspace  create_package.py  package.py  pyproject.toml
client/ayon_toastnotify/: __init__.py  addon.py  debug_alerter.py  install_alerter.py  install_burnttoast.py  installer.py  logger.py  version.py
client/ayon_toastnotify/api/: client.py  logger.py  notification_manager.py
server/: __init__.py
server/settings/: __init__.py  main.py
