[tool.poetry]
name = "toastnotify"
version = "0.1.8"
description = "Debugly Addon"
authors = ["Aleks Berland"]
license = "MIT License"
homepage = "https://ayon.ynput.io/"
documentation = "https://ayon.ynput.io/docs/addon_site_sync_admin"
repository = "https://github.com/ynput/ayon-sitesync"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
ayon = "^0.1.0"
qtpy = "^2.4.3"

[tool.poetry.group.dev.dependencies]
tomlkit = "^0.13.2"
requests = "^2.32.3"
mkdocs-material = "^9.6.7"
mkdocs-autoapi = "^0.4.0"
mkdocstrings-python = "^1.16.2"
mkdocstrings-shell = "^1.0.2"
mkdocs-click = "^0.8.1"
mkdocs-minify-plugin = "^0.8.0"
markdown-checklist = "^0.4.4"
mdx-gh-links = "^0.4"
pymdown-extensions = "^10.14.3"
mike = "^2.1.3"
